# infiny_discord_bot

./: Cargo.toml  README.md  var.env
data/: greeting.txt
src/: main.rs
src/handler/: handler.rs
src/meet/: mod.rs
