[package]
name = "infiny-bot"
version = "0.1.0"
authors = ["Yuttapichai Kerdcharoen <yuttapichai.ke@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10"}
